overlapping fix from #461

--- a/assets/src/scss/pages/_menu.scss
+++ b/assets/src/scss/pages/_menu.scss
@@ -135,3 +135,9 @@
   padding: $card-spacer-x $modal-inner-padding 10px;
   border-top: 1px solid $light;
 }
+
+.div-sticky {
+  position: -webkit-sticky;  
+  position: sticky;
+  top: 68px;
+}
